# Autoconf/Automake binaries and headers
#
#
bin_PROGRAMS=

if UCVM_AM_ENABLE_CVMH
bin_PROGRAMS += run_ucvm_query_cvmh.sh
run_ucvm_query_cvmh_sh_SOURCES = run_ucvm_query_cvmh.sh
endif

if UCVM_AM_ENABLE_CENCAL 
if UCVM_AM_ENABLE_CVMS5
bin_PROGRAMS += run_ucvm_query_cencal_cvms5.sh
run_ucvm_query_cencal_cvms5_sh_SOURCES = run_ucvm_query_cencal_cvms5.sh
endif
endif

if UCVM_AM_ENABLE_CENCAL 
if UCVM_AM_ENABLE_CVMS
bin_PROGRAMS += run_ucvm_query_cencal_cvms.sh
run_ucvm_query_cencal_cvms_sh_SOURCES = run_ucvm_query_cencal_cvms.sh
endif
endif


all: $(bin_PROGRAMS)
############################################
# Special build targets
############################################
check: $(bin_PROGRAMS)
	@( cd ${prefix}/tests/ucvm; \
	for i in $(bin_PROGRAMS); do \
		./$${i}; \
	done \
	)

install: $(bin_PROGRAMS)
	mkdir -p ${prefix}/tests/ucvm
	for i in $(bin_PROGRAMS); do \
		cp $${i} ${prefix}/tests/ucvm; \
		echo "(cd ucvm; ./$${i})" >> ${prefix}/tests/run-testing; \
	done

clean: 
	rm -f *.o *~


